--- a/index.html
+++ b/index.html
@@ -651,15 +651,15 @@
         // Sample data for results
         const resultsData = {
             1: [
-                { subject: 'Xisaab', grade: 0 },
-                { subject: 'Seynis', grade: 0 },
-                { subject: 'Somali', grade: 0 },
-                { subject: 'C.bulsho', grade: 0 },
-                { subject: 'Carabi', grade: 0 },
-                { subject: 'Tarbiyo', grade: 0 },
-                { subject: 'English', grade: 0 },
-                { subject: 'Teknoloji', grade: 0 },
-                { subject: 'Baratiko', grade: 0 }
+                { subject: 'Xisaab', grade: 32 },
+                { subject: 'Seynis', grade: 66.2 },
+                { subject: 'Somali', grade: 75 },
+                { subject: 'C.bulsho', grade: 70 },
+                { subject: 'Carabi', grade: 50 },
+                { subject: 'Tarbiyo', grade: 80 },
+                { subject: 'English', grade: 80 },
+                { subject: 'Teknoloji', grade: 43.8 },
+                { subject: 'Caafimaad', grade: 77 }
             ],
             2: [
                 { subject: 'Xisaab', grade: 0 },
@@ -965,3 +965,4 @@
 </body>
 
 </html>
+
